commons-logging rework attempts - still unsucessful in finding away to not have requires commons.logging, which has an unstable name despite likely never changing